k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emt-db
  namespace: emt-lab
spec:
  selector:
    app: emt-db
  ports:
    - port: 5432
      targetPort: 5432
