k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emt-frontend-service
  namespace: emt-lab
spec:
  selector:
    app: emt-frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
